--- a/Prevu.Synoptics.V3085_Anviplas/P570.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P570.xaml
@@ -8,123 +8,136 @@
              xmlns:Belts="clr-namespace:Prevu.Drawings.Machines.Belts;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P570" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas >
-        <Labels:Pipe Width="272" StatusComponent="580-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1134" Canvas.Top="645" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="130" StatusComponent="570-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="790" Canvas.Top="584" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="352" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="286" Canvas.Top="301">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="298" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="296" Canvas.Top="327">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="202" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="248" Canvas.Top="181"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="317" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="150" Canvas.Top="128"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="166" StatusComponent="570-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="694" Canvas.Top="523"/>
-        <Labels:Pipe Width="182" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="472" Canvas.Top="305" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="108" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="327" Canvas.Top="305"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="353" Canvas.Top="342">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="613" Canvas.Top="341">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:V01_NT_NastroBuffer Canvas.Left="362" Canvas.Top="378" Height="166" Width="378" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Rectangle HorizontalAlignment="Center" Height="4" Stroke="Black" VerticalAlignment="Top" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="1359" Canvas.Top="650" StrokeThickness="2">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1374" Canvas.Top="688"/>
-        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="39" Canvas.Left="642" Canvas.Top="356"/>
-        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="39" Canvas.Left="382" Canvas.Top="356"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Height="52" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="279" Canvas.Top="282">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:NT_ConveyorBelt Canvas.Left="877" Canvas.Top="640" Width="216" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:NT_ConveyorBelt.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:NT_ConveyorBelt.RenderTransform>
-        </Machines:NT_ConveyorBelt>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="570-01-MA1" 
-            JumpToLabel="544-01-MA1" Canvas.Left="80" Canvas.Top="98"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="570-01-MA1" 
-            JumpToLabel="564-01-MA1" Canvas.Left="178" Canvas.Top="152"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="570-21-CV1" Canvas.Left="178" Canvas.Top="281"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="580-71-ECS1" Canvas.Left="1293" Canvas.Top="574" RenderTransformOrigin="-0.615,-1.061"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="570-01-MA1" Canvas.Left="349" Canvas.Top="549"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+  <Canvas >
+    <Labels:Pipe Width="252" StatusComponent="570-71-ECS1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="359" Canvas.Top="351" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="272" StatusComponent="580-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1116" Canvas.Top="645" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="130" StatusComponent="570-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="812" Canvas.Top="584" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="352" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="293" Canvas.Top="301">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="298" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="304" Canvas.Top="327">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="187" StatusComponent="564-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="270" Canvas.Top="181"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="302" StatusComponent="544-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="172" Canvas.Top="128"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="166" StatusComponent="570-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="716" Canvas.Top="523"/>
+    <Labels:Pipe Width="179" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="497" Canvas.Top="305" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="92" StatusComponent="570-21-CV1" Color="Air" Height="6" Canvas.Left="348" Canvas.Top="305"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="375" Canvas.Top="342">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="77" StatusComponent="570-21-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="635" Canvas.Top="341">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:V01_NT_NastroBuffer Canvas.Left="384" Canvas.Top="378" Height="166" Width="378" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle HorizontalAlignment="Left" Height="4" Stroke="Black" VerticalAlignment="Center" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="1341" Canvas.Top="650" StrokeThickness="2">
+      <Rectangle.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Rectangle.RenderTransform>
+    </Rectangle>
+    <Machines:External HorizontalAlignment="Left" VerticalAlignment="Center" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1356" Canvas.Top="688"/>
+    <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="39" Canvas.Left="664" Canvas.Top="356"/>
+    <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="39" Canvas.Left="404" Canvas.Top="356"/>
+    <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Height="52" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="301" Canvas.Top="282">
+      <Machines:CV_Valve_001.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="180"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:CV_Valve_001.RenderTransform>
+    </Machines:CV_Valve_001>
+    <Machines:NT_ConveyorBelt Canvas.Left="899" Canvas.Top="640" Width="216" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Machines:NT_ConveyorBelt.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
+          <SkewTransform/>
+          <RotateTransform/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:NT_ConveyorBelt.RenderTransform>
+    </Machines:NT_ConveyorBelt>
+    <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="570-41-LT1" Canvas.Left="358" Canvas.Top="406"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            JumpFromLabel="570-01-MA1" 
+            JumpToLabel="544-01-MA1" Canvas.Left="102" Canvas.Top="98"/>
+    <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="570-41-LT2" Canvas.Left="622" Canvas.Top="406" />
-        <Labels:DeviceLabel 
-            ComponentName="580-01-MA1" Canvas.Left="1051" Canvas.Top="574" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-      ComponentName="570-BUFFER" Canvas.Left="506" Canvas.Top="550" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-0.189,0.7"/>
-    </Canvas>
+            JumpFromLabel="570-01-MA1" 
+            JumpToLabel="564-01-MA1" Canvas.Left="200" Canvas.Top="152"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="570-21-CV1" Canvas.Left="200" Canvas.Top="281"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="580-71-ECS1" Canvas.Left="1275" Canvas.Top="574" RenderTransformOrigin="-0.615,-1.061"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="570-01-MA1" Canvas.Left="371" Canvas.Top="549"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="570-41-LT1" Canvas.Left="380" Canvas.Top="406"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="570-41-LT2" Canvas.Left="644" Canvas.Top="406" />
+    <Labels:DeviceLabel 
+            ComponentName="580-01-MA1" Canvas.Left="1073" Canvas.Top="574" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
+      ComponentName="570-BUFFER" Canvas.Left="528" Canvas.Top="550" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="-0.189,0.7"/>
+    <Labels:Pipe Width="74" StatusComponent="570-71-ECS1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="480" Canvas.Top="228" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
+      ComponentName="570-71-ECS1" Canvas.Left="542" Canvas.Top="208" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+  </Canvas>
 </UserControl>
