--- a/Prevu.Synoptics.V2150_Planeta/Pages/P810.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P810.xaml
@@ -317,8 +317,8 @@
         <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="166" Canvas.Left="430" Canvas.Top="448"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="245" Canvas.Left="989" Canvas.Top="98" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="1346" Canvas.Top="644" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="66" Canvas.Top="232" Height="274" Width="208" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-41-WT1" TrendName="WEIGHT"/>
-        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="484" Canvas.Top="115" Height="274" Width="208" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-41-WT1" TrendName="WEIGHT"/>
+        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="66" Canvas.Top="232" Height="274" Width="208" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-41-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
+        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="484" Canvas.Top="115" Height="274" Width="208" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-41-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
         <Machines:V01_DV_Diverter Canvas.Left="143" Canvas.Top="76" Height="57" Width="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:VRC_WaterCollectingTank Canvas.Left="334" Canvas.Top="669" Width="31" Height="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VS_Airlock Canvas.Left="320" Canvas.Top="677" HorizontalAlignment="Left" VerticalAlignment="Center"/>
