--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P230.xaml
@@ -67,7 +67,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="217" StatusComponent="228-71-ECS3" PipeHeight="Medium" Canvas.Left="102" Canvas.Top="93"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="217" StatusComponent="228-71-ECS3" PipeHeight="Medium" Canvas.Left="114" Canvas.Top="93"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="367" Canvas.Top="683">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -168,24 +168,24 @@
     <Machines:VRC_WaterCollectingTank Height="66" Width="93" Canvas.Left="1032" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="286" Canvas.Top="757" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="1056" Canvas.Top="757" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Rectangle Height="94" Stroke="Black" Width="4" Canvas.Left="221" Canvas.Top="54" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="198" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Rectangle Height="216" Stroke="Black" Width="4" Canvas.Left="232" Canvas.Top="54" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="209" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
         </TransformGroup>
       </Machines:External.RenderTransform>
     </Machines:External>
-    <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="26" Foreground="White" Text="BOLLEGRAAF" Canvas.Left="38" Canvas.Top="23" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <TextBlock Canvas.Top="142" Text="{Custom:Loc Bottles Selection}" TextWrapping="Wrap" TextAlignment="Left" Opacity="0.7" Canvas.Left="38" FontSize="26" Foreground="White" Height="66" Width="137" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="26" Foreground="White" Text="BOLLEGRAAF" Canvas.Left="50" Canvas.Top="23" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <TextBlock Canvas.Top="142" Text="{Custom:Loc Bottles Selection}" TextWrapping="Wrap" TextAlignment="Left" Opacity="0.7" Canvas.Left="50" FontSize="26" Foreground="White" Height="66" Width="137" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="234-01-MA1" JumpToLabel="268-01-MA1" Canvas.Left="669" Canvas.Top="687"/>
     <Labels:JumpLabel JumpFromLabel="244-01-MA1" JumpToLabel="287-01-MA1" Canvas.Left="1423" Canvas.Top="683" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="229-01-MA1" JumpToLabel="291-01-MA1" Canvas.Left="1066" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
     <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="292-01-MA1" Canvas.Left="66" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="236-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="425" Canvas.Top="751" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="246-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="1195" Canvas.Top="751" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:JumpLabel JumpFromLabel="098-01-ECS2" JumpToLabel="029-71-ECS2" Canvas.Left="48" Canvas.Top="63" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="228-01-MA1" Canvas.Left="398" Canvas.Top="120"/>
+    <Labels:JumpLabel JumpFromLabel="098-01-ECS2" JumpToLabel="029-71-ECS2" Canvas.Left="60" Canvas.Top="63" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="228-01-MA1" Canvas.Left="403" Canvas.Top="120"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="234-01-MA1" Canvas.Left="534" Canvas.Top="633"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="230-01-YA1" Canvas.Left="359" Canvas.Top="398"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="232-01-MA1" Canvas.Left="424" Canvas.Top="551"/>
@@ -202,6 +202,7 @@
     <Labels:DeviceLabel ComponentName="240-01-MA1" Canvas.Left="1006" Canvas.Top="362" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="236-01-MA1" Canvas.Left="155" Canvas.Top="755" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="246-01-MA1" Canvas.Left="925" Canvas.Top="755" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="228-71-ECS3" Canvas.Left="237" Canvas.Top="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="228-71-ECS3" Canvas.Left="254" Canvas.Top="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="BGRAAF-COMM" Canvas.Left="60" Canvas.Top="222" HorizontalAlignment="Left" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
