--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D950.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Details/D950.xaml
@@ -9,15 +9,13 @@
              x:Class="Prevu.Synoptics.D950" 
              mc:Ignorable="d" 
               d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="427" Width="452">
-        <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="10" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-61-LEV" SignalName="LSHA" Canvas.Left="59" Canvas.Top="39"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-61-LEV" SignalName="LSH" Canvas.Left="59" Canvas.Top="94" />
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-62-LEV" SignalName="LSHA" Canvas.Left="272" Canvas.Top="39"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-62-LEV" SignalName="LSH" Canvas.Left="272" Canvas.Top="94" />
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-61-LEV" Canvas.Left="77" Canvas.Top="219"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-62-LEV" Canvas.Left="285" Canvas.Top="219"/>
-        <Labels:SignalLabel ComponentName="950-61-LEV" SignalName="LSL" Canvas.Left="59" Canvas.Top="166" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:SignalLabel ComponentName="950-62-LEV" SignalName="LSL" Canvas.Left="272" Canvas.Top="166" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    </Canvas>
+  <Canvas Height="427" Width="452">
+    <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="10" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-61-LEV" SignalName="LSHA" Canvas.Left="59" Canvas.Top="39"/>
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-61-LEV" SignalName="LSH" Canvas.Left="59" Canvas.Top="104" />
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-62-LEV" SignalName="LSHA" Canvas.Left="272" Canvas.Top="39"/>
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-62-LEV" SignalName="LSH" Canvas.Left="272" Canvas.Top="104" />
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-61-LEV" Canvas.Left="77" Canvas.Top="219"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="950-62-LEV" Canvas.Left="285" Canvas.Top="219"/>
+  </Canvas>
 </UserControl>
